Preferences: comment out user language
JS error and functionnality not used in the app.

--- a/templates/search/preferences.jade
+++ b/templates/search/preferences.jade
@@ -57,12 +57,12 @@ div(ng-controller="preferencesController")
           .col-md-6
             input(type="text", ng-model="vat_book")
 
-         .row
-           h3 {% trans "User preferences" %}
-           .col-md-6
-             h3 {% trans "Language" %}
-           .col-md-6
-             select(ng-model="user_language", ng-options="it.name for it in language_choices")
+         //- .row
+         //-   h3 {% trans "User preferences" %}
+         //-   .col-md-6
+         //-     h3 {% trans "Language" %}
+         //-   .col-md-6
+         //-     select(ng-model="user_language", ng-options="it.name for it in language_choices")
 
          .row
             .col-md-6
