Card show Places: order by id, so most important first

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -116,7 +116,7 @@ div#abelujo
           tr
             td {% trans "Presente in" %}
             td
-              table
+              table.table.table-condensed
                 for name_qty in places_quantities
                   tr
                     td {{ name_qty.0 }} 
