--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -42,6 +42,7 @@ div#abelujo
   .col-lg-3
     .btn-group
       a.btn.btn-default(href="{% url 'card_edit' object.pk %}", title="{% trans 'Edit the card' %}") {% trans "Edit" %}
+      a.btn.btn-default(href="{% url 'card_places_add' object.pk %}", title="{% trans 'Add to places' %}") {% trans "Add..." %}
       a.btn.btn-default(href="{% url 'card_move' object.pk %}") {% trans 'Move…' %}
 
   .col-lg-7
