Dashboard: re-show the total number of cards (copies)
now that we worked the request (faster) and the quantity relationships.

--- a/templates/search/dashboard.jade
+++ b/templates/search/dashboard.jade
@@ -38,6 +38,9 @@ div(ng-controller="dashboardController", ng-cloak="stats")
             td: h4 {% trans "Number of titles" %}
             td: h4 {{'stats.nb_titles.value'|ng }}
           tr
+            td: h4 {% trans "Number of books" %}
+            td: h4 {{'stats.nb_cards.value'|ng }}
+          tr
             td(title='{% trans "Cost of each card by its quantity in stock, rounded to the upper decimal." %}'): h4 {% trans "Value of the stock" %}
             td: h4 {{'stats.total_cost.value | currency'|ng }}
           tr
