--- a/templates/search/searchresults.jade
+++ b/templates/search/searchresults.jade
@@ -53,7 +53,7 @@ div(ng-cloak, ng-show="cards", ng-controller="searchResultsController")
           button.btn.btn-primary#submit-button(ng-click="validate()", type="submit", placeholder="{% trans 'Key words, or ean/isbn' %}") {% trans "Search" %}
       div.col-md-4
         span  {% trans "or" %}: 
-            a(href="{% url 'card_edit' %}") {% trans "Add a card manually" %}
+            a(href="{% url 'admin:search_card_add' %}") {% trans "Add a card manually" %}
 
  .row(ng-show="cards.length != 0")
     .col-md-10
