New entry: set threshold (minimal qty)
fixes #100

--- a/templates/search/card_add.jade
+++ b/templates/search/card_add.jade
@@ -31,7 +31,6 @@ div.ng-cloak(ng-controller="cardAddController")
       tr
         td.my-narrow {% trans "shelf" %}
         td: select(ng-model="shelf", ng-options="it.fields.name for it in shelfs")
-    table
       tr
         td.my-narrow {% trans "supplier" %}
         td
@@ -46,6 +45,11 @@ div.ng-cloak(ng-controller="cardAddController")
               span(ng-bind="item.name")
           a(target="_blank", href="/admin/search/distributor/add")
                 i.glyphicon.glyphicon-plus-sign(title='{% trans "Add a supplier" %}')
+
+      tr
+        td {% trans "Minimal qty" %}
+        td
+          input(type="number", min=0, ng-model="threshold")
 
   .row(ng-show="filtered_deposits.length")
       h4 {% trans "Add to following deposits" %}:
