--- a/templates/search/card_edit.jade
+++ b/templates/search/card_edit.jade
@@ -70,6 +70,11 @@ div.ng-cloak(ng-controller="cardCreateController", ng-show="ready")
         input.form-control(type="url", ng-model="details_url")
 
   .row
+    .col-lg-4
+        label {% trans "Minimal qty" %}
+        input.form-control(type="number", min="0", ng-model="threshold")
+
+  .row
     .col-lg-6
         h4 {% trans "Authors" %}:
         span
