--- a/templates/search/card_add.jade
+++ b/templates/search/card_add.jade
@@ -30,7 +30,7 @@ div.ng-cloak(ng-controller="cardAddController")
     table
       tr
         td.my-narrow {% trans "shelf" %}
-        td: select(ng-model="shelf", ng-options="it.fields.name for it in shelfs")
+        td: select.my-narrow(ng-model="shelf", ng-options="it.fields.name for it in shelfs")
       tr
         td.my-narrow {% trans "supplier" %}
         td
