--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -122,8 +122,23 @@ div(ng-cloak, ng-controller="collectionController")
       span(style="margin-top: 18px; margin-left: 7px") {% trans "Number of titles" %}: {{'stats.nb_titles.value'|ng}}
       span(style="margin-top: 18px; margin-left: 7px") {% trans "Number of books" %}: {{'stats.nb_cards.value'|ng}}
 
+      span.text-right(aria-label="page navigation")
+         ul.pagination(ng-show="cards.length")
+           li.page-item
+             a.page-link(ng-click="firstPage()")  &laquo;
+           li.page-item
+             a.page-link(ng-click="previousPage()") <
+           li.page-item
+             a.page-link Page {{ 'page' | ng }} / {{ 'meta.num_pages' | ng }}
+           li.page-item
+             a.page-link(ng-click="nextPage()") >
+           li.page-item
+             a.page-link(ng-click="lastPage()") &raquo;
 
- table.row-border.hover(ng-show="cards.length != 0", datatable="ng")
+
+ div(ng-show="cards.length == 0") {% trans "No results" %}
+
+ table.row-border.hover.table.table-condensed.table-striped(ng-show="cards.length != 0")
     thead
       th: input(type="checkbox", ng-click="toggleAll()")
       th(ng-show="show_images")
