My Stock: show nb of results

--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -130,7 +130,7 @@ div(ng-cloak, ng-controller="collectionController")
              li.page-item
                a.page-link(ng-click="previousPage()") <
              li.page-item
-               a.page-link Page {{ 'page' | ng }} / {{ 'meta.num_pages' | ng }}
+               a.page-link Page {{ 'page' | ng }} / {{ 'meta.num_pages' | ng }} ({{ 'meta.nb_results' | ng }})
              li.page-item
                a.page-link(ng-click="nextPage()") >
              li.page-item
@@ -198,7 +198,7 @@ div(ng-cloak, ng-controller="collectionController")
              li.page-item
                a.page-link(ng-click="previousPage()") <
              li.page-item
-               a.page-link Page {{ 'page' | ng }} / {{ 'meta.num_pages' | ng }}
+               a.page-link Page {{ 'page' | ng }} / {{ 'meta.num_pages' | ng }} ({{ 'meta.nb_results' | ng }})
              li.page-item
                a.page-link(ng-click="nextPage()") >
              li.page-item
