--- a/templates/search/to_command.jade
+++ b/templates/search/to_command.jade
@@ -52,6 +52,14 @@ div(ng-cloak, ng-controller="basketToCommandController")
           popover-trigger="mouseenter"
           popover-placement="left") {{ " dist_name " | ng }}
             span.badge {{ " cards.length " | ng }}
+     li.list-group-item.mouse-pointer(
+          ng-show="meta.nb_copies_no_dist",
+          ng-class="",
+          ng-click="dist_href('undefined')",
+          popover-trigger="mouseenter",
+          popover-placement="left") {% trans "no distributor" %}
+            span.badge {{ 'meta.nb_copies_no_dist' | ng }}
+
 
 
   .col-md-10
@@ -152,6 +160,100 @@ div(ng-cloak, ng-controller="basketToCommandController")
                   td.text-right  {{ 'get_total_price_discounted_excl_vat(dist_name)' |ng}}  €
                   td
                   td
+
+    // Same for undefined distributor. jade -> horrible copy-paste.
+    span
+            .row
+             h4.col-md-6.myanchor(id="undefined") {% trans "Undefined distributor" %}
+             div.btn-group
+                button.btn.btn-default.dropdown-toggle(type="button", data-toggle="dropdown", type="button", aria-haspopup="true", aria-expanded="false", title="{% trans 'Export the list to the required format' %}") {% trans "Export" %}
+                   span.caret
+                 ul.dropdown-menu
+                   li: a(href="/baskets/1/export?format=txt&report=simplelisting&distributor_id={{ 'grouped_dist[dist_name][0].id' | ng}}", title='{% trans "Export the list of all cards to command in txt format." %}') {% trans "Listing" %} - txt
+
+                   li: a(href="/baskets/1/export?format=csv&report=simplelisting&distributor_id={{ 'grouped_dist[dist_name][0].id' | ng}}", title='{% trans "Export the list of all cards to command in a csv, suitable for LibreOffice and to give to other services, like Dilicom." %}') {% trans "isbn and quantity" %} - csv (Dilicom)
+
+               button#ok.btn.btn-success(ng-click="validate_command(dist_name)",
+                 title='{% trans "The command was passed, we`ll wait to receive it." %}') {% trans "Ok" %}
+
+    .row
+           .btn-group
+              span.text-right(aria-label="page navigation")
+                   ul.pagination(ng-show="true", ng-cloak)
+                     li.page-item
+                       a.page-link(ng-click="firstPage()")  &laquo;
+                     li.page-item
+                       a.page-link(ng-click="previousPage()") <
+                     li.page-item
+                       a.page-link Page {{ 'page' | ng }} / {{ 'meta.num_pages' | ng }} ({{ 'meta.nb_copies_no_dist' | ng }})
+                     li.page-item
+                       a.page-link(ng-click="nextPage()") >
+                     li.page-item
+                       a.page-link(ng-click="lastPage()") &raquo;
+
+    table.table.table-condensed.table-striped
+              thead
+                th(ng-show="show_images")
+                th {% trans "Title" %}
+                th {% trans "Author" %}
+                th.text-right {% trans "Price" %}
+                th.text-right {% trans "With discount" %} {{ 'grouped_dist[dist_name][0].discount' | ng}}
+                th.text-right {% trans "Quantity left" %}
+                th.text-right {% trans "To command" %}
+              tbody
+                tr(ng-repeat="card in cards_no_dist")
+                  td(ng-show="show_images")
+                    .col-md-6(ng-show="show_images")
+                      img.myImg(ng-show="card.cover", src="{{ 'card.cover' | ng }}")
+
+                  td.col-md-6: a(href="{{ 'card.get_absolute_url' | ng}}") {{ 'card.title' | ng }}
+                  td.col-md-1 {{ 'card.authors_repr' | ng }}
+                  td.col-md-1.text-right {{ 'card.price | number:2' |ng }} €
+                  td.col-md-1.text-right {{ 'card.price_discounted | number:2' |ng }} €
+                  td.col-md-1.text-right {{ 'card.quantity' |ng }}
+                  td.col-md-1
+                    input.my-number-input(type="number", min=0, max=99,
+                      ng-model="card.basket_qty"
+                      ng-change="save_quantity(dist_name, $index)")
+                    i.glyphicon.glyphicon-remove.mouse-pointer(ng-click="remove_from_selection(dist_name, $index)", style="padding-left: 1em;", title='{% trans "Remove from list" %}')
+
+                tr
+                  td(ng-show="show_images")
+                  td.col-md-7.text-right {% trans "Total" %}
+                  td
+                  td.col-md-1.text-right {{ 'get_total_price("undefined")' |ng}}  €
+                  td.col-md-1.text-right {{ 'get_total_price_discounted("undefined")' |ng}}  €
+                  td
+                  td.col-md-1 {{'get_total_copies("undefined")'|ng}}
+
+                tr
+                  td(ng-show="show_images")
+                  td
+                    | {% trans "Total" %}
+                    | {# Translators: excl. tax: price excluding tax (french: HT). #}
+                    | {% trans "excl. tax" %}
+
+                  td
+                  td.text-right  {{ 'get_total_price_excl_vat("undefined")' |ng}}  €
+                  td.text-right  {{ 'get_total_price_discounted_excl_vat("undefined")' |ng}}  €
+                  td
+                  td
+
+    .row
+           .btn-group
+              span.text-right(aria-label="page navigation")
+                   ul.pagination(ng-show="true", ng-cloak)
+                     li.page-item
+                       a.page-link(ng-click="firstPage()")  &laquo;
+                     li.page-item
+                       a.page-link(ng-click="previousPage()") <
+                     li.page-item
+                       a.page-link Page {{ 'page' | ng }} / {{ 'meta.num_pages' | ng }} ({{ 'meta.nb_copies_no_dist' | ng }})
+                     li.page-item
+                       a.page-link(ng-click="nextPage()") >
+                     li.page-item
+                       a.page-link(ng-click="lastPage()") &raquo;
+
 
   // we'll use the modal shortly !
   script(type="text/ng-template", id="commandModal.html")
