Vue baskets - element-ui Notifications
for #113

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -27,6 +27,8 @@ html(ng-app="abelujo")
     link(rel='stylesheet', type='text/css', href='{% static "css/jquery.dataTables.min.css" %}')
     link(rel='stylesheet', type='text/css', href='{% static "css/loading-bar.min.css" %}')
     link(rel='stylesheet', type='text/css', href='{% static "css/hotkeys.min.css" %}')
+    // index.css: element-ui
+    link(rel='stylesheet', type='text/css', href='{% static "css/index.css" %}')
     link(href='{% static "css/bootstrap-tour.min.css', rel='stylesheet')
 
     script(src="{% static 'app.js' %}")
