--- a/templates/search/history_sells.jade
+++ b/templates/search/history_sells.jade
@@ -129,7 +129,7 @@ div
           div
             //- h4 {% trans "Total sells" %}: {{'stats_month.nb_sold_cards.toFixed(2)'|ng}} {% trans "€" %}
             h4 {% trans "Total" %} {% trans "excl. tax" %}: {{ 'stats_month.revenue.toFixed(2)' | ng }} {% trans "€" %}
-            div {% trans "total cards sold" %}: {{'stats_month.nb_sold_cards'|ng}}
+            div {% trans "total cards sold" %}: {{'stats_month.nb_cards_sold'|ng}}
             div {% trans "mean" %}: {{'stats_month.mean.toFixed(2)'|ng}} {% trans "€" %}
             h4 {% trans "Best 10 sells" %}
             table.table
